Fixing small screen alignment

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,10 @@ main .year-box {
     width: 100%;
   }
 
+  .username-input {
+    width: 100%;
+  }
+
   .header .date-box {
     width: 35%;
   }
@@ -265,7 +269,7 @@ main .year-box {
   }
 
   .year-box p {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .Display {
